@@ -18,8 +18,10 @@ yoshimi-1.2.x
   yoshimi lv2 plugin settings works.
 - Added per instance ability to change panel window between 2x8 or 1x16.
   Haven't decided on best way to store setting.
-- Fixed bug in wide panel window
-- panel settings saved to yoshimi.config
+- Fixed bug in wide panel window.
+- panel settings saved to yoshimi.config.
+- patch provided by xnakos fixes part enable sync between panel and main window.
+  This revealed it wasn't done properly for MIDI so that's been added too. 
 
 yoshimi-1.2.5
 - Made yoshimi support multiple in-process instances:
